--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #just an example, dont share your .env settings
 SECRET_KEY='342s(s(!hsjd998sde8$=o4$3m!(o+kce2^97kp6#ujhi'
 DB_NAME='tribune'
-DB_USER='user'
-DB_PASSWORD='password'
+DB_USER='moringa'
+DB_PASSWORD='12345'
 DB_HOST='127.0.0.1'
 MODE='dev' #set to 'prod' in production
 DISABLE_COLLECTSTATIC=1
